--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <title>The Clock</title>
 
   <link href="css/main.css" rel="stylesheet" type="text/css">
-  <link href="http://fonts.cdnfonts.com/css/quantum" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/quantum" rel="stylesheet">
   <script async src="js/main.js" type="text/javascript"></script>
 
 </head>
 <body>
   <canvas></canvas>
+  <audio autoplay loop>
+    <source src="audio/background.mp3">
+  </audio>
 </body>
 </html>
